:bug: fix dark theme overflowed background

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,7 @@
   height: 100%;
   display: flex;
   flex-flow: column;
+  overflow: scroll;
 }
 
 .spacer {
